--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,6 +1,13 @@
-body{
+
+body,html{
 	font-family: 'Exo_2';
 	font-size: 16px;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 hr {
   height: 0;
@@ -48,4 +55,21 @@ input.input:active,input.input:focus{
   border: 1px solid transparent;
   border-radius: 4px;
   border-color: #bbb;
+}
+#box{
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  display: block;
+}
+#canvas{
+  margin: 0;
+  margin-left: 2px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  padding: 0;
+  font-size: 20px;
+  border: solid 2px #1DE;
+  overflow: hidden;
 }
