--- a/client/css/main.css
+++ b/client/css/main.css
@@ -17,7 +17,7 @@ hr {
   border: 0;
   border-top: dotted 2px #ddd;  
   margin: 10px 5px;
-  -webkit-border-radius: 50%;
+  -webkit-border-radius: 50%; 
   -moz-border-radius: 50%;
   border-radius: 50%;
 }
@@ -29,6 +29,12 @@ input.input{
 }
 input.input:active,input.input:focus{
  border-color: #bbb;
+}
+.disabled{
+  display: none;
+}
+.active{
+  display: block;
 }
 .container{
 	padding:5px;
@@ -56,12 +62,28 @@ input.input:active,input.input:focus{
   border-radius: 4px;
   border-color: #bbb;
 }
-#box{
+.box{
+  display: block;
+  height: 100%;
+  background-color: rgba(230, 233, 232, 0.3);
+  position: relative;
 
 }
 #canvas{
+  display: none;
   margin-left: 2px;
   font-size: 20px;
-  border: solid 2px #1DE;
   overflow: hidden;
+}
+#inputName{
+  width: 100%;
+  margin-bottom: 5px;
+
+}
+#btnStart{
+  width: 100%;
+}
+.title-player-name{
+  display: block;
+  text-align: center;
 }
