--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,171 +1,15 @@
-
 body,html{
-	font-family: 'Exo_2';
-	font-size: 16px;
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  display: block;
+	height: 100%;
+	overflow: hidden;
 }
-.container-fluid .row,.container .row{
-  width: 100%;
-}
-hr {
-  height: 0;
-  -webkit-box-sizing: content-box;
-     -moz-box-sizing: content-box;
-          box-sizing: content-box;
-  border: 0;
-  border-top: dotted 2px #ddd;  
-  margin: 10px 5px;
-  -webkit-border-radius: 50%; 
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-}
-input.input{
- border-radius: 4px;
- border-color: #ddd;
- border-style: solid;
- padding: 2px;
- box-sizing: border-box;
-}
-input.input:active,input.input:focus{
- border-color: #bbb;
-}
-.active{
-  display: block;
-}
-div.disabled{
-  display: none;
-}
-div.container{
-	padding:5px;
-}
-.btn {
-  display: inline-block;
-  padding: 6px 12px;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-      touch-action: manipulation;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  background-image: none;
-  background-color: #eee;
-  border: 2px solid transparent;
-  border-radius: 4px;
-  border-color: #bbb;
-}
-.btn-primary{
-  background-color: #1DE;
-  border-color: #1BE;
-}
-.box-game{
-
-}
-.box-login,.box-restart{
-  display: block;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  position: relative;
-  position: absolute;
-  width: 100%;
-}
-.box-restart{
-
-}
-#canvas{
-  display: block;
-  margin-left: 2px;
-  font-size: 20px;
-  overflow: hidden;
-  border:solid 2px #1DE;
-  z-index: -100;
-}
-#inputName{
-  width: 100%;
-  margin-bottom: 15px;
-  border-color: #11B6EE;
-
-}
-#btnStart{
-  width: 100%;
-}
-.box-restart .title-restart,.box-login .title-input{
-  display: block;
-  text-align: center;
-  margin: 30px 0;
-}
-.title-login{
-  text-align: center;
-}
-#miniMap{
-  position: absolute;
-  right: 20px;
-  bottom: 20px;
-  border: solid 2px #3ae;
-  display: block;
-  box-sizing: border-box;
-  background-color: #555;
-}
-#box-chat{
-  position: absolute;
-  left: 20px;
-  bottom: 20px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: solid 4px #1BE;
-  border-radius: 8px;
-  padding: 5px;
-  opacity: 0.3;
-}
-#box-chat:hover,#box-chat:active,#box-chat:focus{
-  opacity: 1;
-}
-.chat-title{
-  display: block;
-  background-color: #ddd;
-  padding: 5px;
-  text-align: center; 
-  margin: -5px -5px 0 -5px;
-
-}
-#chat-output{
-  font-size: 14px;
-  overflow: hidden;
-  padding:  5px 0;
-  box-sizing: border-box;
-}
-#chat-output > ul{
-  padding: 0;
-  margin: 0;
-  overflow-y: scroll;
-
-  overflow-x: hidden;
-
-}
-#chat-output > ul > li > span{
-  font-weight: bold ;
-  min-width: 50px;
-  display: inline-block;
+p.otstup{
+	text-indent: 25px;
 }
 
-#chat-input,#chat-btn{
-  display: inline-block;
-  box-sizing: border-box;
+.progress-game{
 }
-#chat-input{
-  background-color: #ddd;
+#content{
+	overflow-y: scroll;
 }
-#chat-btn{
-  float: right;
-  vertical-align:inherit;
+.footer{
 }
